WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
42846
WorkQueue should detect ::WaitForMultipleObject failures
https://bugs.webkit.org/show_bug.cgi?id=42846
Summary
WorkQueue should detect ::WaitForMultipleObject failures
Adam Roben (:aroben)
Reported
2010-07-22 13:35:43 PDT
WorkQueue should detect ::WaitForMultipleObject failures
Attachments
Patch
(2.14 KB, patch)
2010-07-22 13:36 PDT
,
Adam Roben (:aroben)
andersca
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Adam Roben (:aroben)
Comment 1
2010-07-22 13:36:18 PDT
Created
attachment 62333
[details]
Patch
Anders Carlsson
Comment 2
2010-07-22 13:51:20 PDT
Comment on
attachment 62333
[details]
Patch Excellent!
Adam Roben (:aroben)
Comment 3
2010-07-22 14:26:19 PDT
Committed
r63912
: <
http://trac.webkit.org/changeset/63912
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug