Make WorkQueue aware of potential errors with ::WaitForMultipleObjects

Fixes <http://webkit.org/b/42846> WorkQueue should detect
::WaitForMultipleObject failures

Reviewed by Anders Carlsson.

* Platform/win/WorkQueueWin.cpp:
(WorkQueue::workQueueThreadBody): Added some assertions about the
various things that can fail with ::WaitForMultipleObjects,
specifically:
  - Passing too many objects
  - Timeouts (which shouldn't happen since we pass a timeout interval
    of INFINITE)
  - Abandoned mutexes (which shouldn't happen since we don't wait on
    any mutexes currently)
  - Miscellaneous failures

Canonical link: https://commits.webkit.org/54749@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@63912 268f45cc-cd09-0410-ab3c-d52691b4dbfc